@@ -1,23 +1,23 @@
 package com.backbase.stream.service;
 
-import com.backbase.dbs.accesscontrol.api.service.v3.LegalEntitiesApi;
-import com.backbase.dbs.accesscontrol.api.service.v3.model.IdItem;
-import com.backbase.dbs.accesscontrol.api.service.v3.model.LegalEntitiesBatchDelete;
-import com.backbase.dbs.accesscontrol.api.service.v3.model.LegalEntityCreateItem;
-import com.backbase.dbs.accesscontrol.api.service.v3.model.LegalEntityPut;
+import com.backbase.accesscontrol.legalentity.api.integration.v3.model.LegalEntityItem;
+import com.backbase.accesscontrol.legalentity.api.integration.v3.model.ResultId;
+import com.backbase.accesscontrol.legalentity.api.service.v1.LegalEntityApi;
+import com.backbase.accesscontrol.legalentity.api.service.v1.model.LegalEntitiesList;
+import com.backbase.accesscontrol.legalentity.api.service.v1.model.LegalEntityUpdate;
 import com.backbase.stream.exceptions.LegalEntityException;
 import com.backbase.stream.legalentity.model.LegalEntity;
 import com.backbase.stream.legalentity.model.ServiceAgreement;
 import com.backbase.stream.mapper.AccessGroupMapper;
 import com.backbase.stream.mapper.LegalEntityMapper;
 import com.backbase.stream.utils.BatchResponseUtils;
-import java.util.Collections;
+import java.util.List;
 import java.util.Objects;
 import lombok.NonNull;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.jetbrains.annotations.NotNull;
 import org.mapstruct.factory.Mappers;
-import org.springframework.data.domain.Pageable;
 import org.springframework.web.client.RestClientException;
 import org.springframework.web.reactive.function.client.WebClientResponseException;
 import reactor.core.publisher.Flux;
@@ -31,8 +31,10 @@ import reactor.core.publisher.Mono;
 @RequiredArgsConstructor
 public class LegalEntityService {
 
+    @NotNull
+    private final LegalEntityApi legalEntityServiceApi;
     @NonNull
-    private final LegalEntitiesApi legalEntitiesApi;
+    private final com.backbase.accesscontrol.legalentity.api.integration.v3.LegalEntityApi legalEntityIntegrationApi;
     @NonNull
     private final BatchResponseUtils batchResponseUtils;
 
@@ -46,7 +48,7 @@ public class LegalEntityService {
      * @return The Created Legal Entity including Internal ID
      */
     public Mono<LegalEntity> createLegalEntity(LegalEntity legalEntity) {
-        LegalEntityCreateItem legalEntityCreateItem = mapper.toPresentation(legalEntity);
+        LegalEntityItem legalEntityCreateItem = mapper.toPresentation(legalEntity);
         return createLegalEntity(legalEntityCreateItem)
             .map(createdLegalEntityId -> {
                 log.info("Created Legal Entity: {} with ID: {}", legalEntity.getName(), createdLegalEntityId.getId());
@@ -55,12 +57,12 @@ public class LegalEntityService {
             });
     }
 
-    private Mono<IdItem> createLegalEntity(LegalEntityCreateItem legalEntity) {
+    private Mono<ResultId> createLegalEntity(LegalEntityItem legalEntity) {
         // Create Legal Entity without master service agreement
-        return legalEntitiesApi.postCreateLegalEntities(legalEntity)
+        return legalEntityIntegrationApi.ingestLegalEntity(legalEntity)
             .doOnError(WebClientResponseException.class, this::handleWebClientResponseException)
             .onErrorResume(WebClientResponseException.class, exception ->
-                Mono.error(new LegalEntityException(legalEntity, "Failed to create Legal Entity",  exception)))
+                Mono.error(new LegalEntityException(exception)))
             .onErrorStop();
     }
 
@@ -68,16 +70,14 @@ public class LegalEntityService {
      * Get Subsidiaries for Legal Entity.
      *
      * @param legalEntityExternalId External Legal Entity ID
-     * @param pageable              Page information
+     * @param cursor                pointer to the last returned item
+     * @param size                  page size
      * @return List of Legal Entities
      */
-    public Flux<LegalEntity> getSubEntities(String legalEntityExternalId, Pageable pageable) {
+    public Flux<LegalEntitiesList> getSubEntities(String legalEntityExternalId, String cursor, int size) {
         return getLegalEntityByExternalId(legalEntityExternalId)
-            .flux()
-            .flatMap(legalEntity ->
-                legalEntitiesApi.getSubEntities(legalEntity.getInternalId(),
-                    Math.toIntExact(pageable.getOffset()), pageable.getPageSize(), null, null)
-                    .map(mapper::toStream));
+            .flatMapMany(legalEntity ->
+                legalEntityServiceApi.getLegalEntities(legalEntity.getInternalId(), cursor, size, null, null, null));
     }
 
     /**
@@ -87,13 +87,16 @@ public class LegalEntityService {
      * @return Service Agreement
      */
     public Mono<ServiceAgreement> getMasterServiceAgreementForExternalLegalEntityId(String legalEntityExternalId) {
-        return legalEntitiesApi.getMasterServiceAgreementByExternalLegalEntity(legalEntityExternalId)
-                .doOnNext(serviceAgreementItem -> log.info("Service Agreement: {} found for legal entity: {}", serviceAgreementItem.getExternalId(), legalEntityExternalId))
-                .onErrorResume(WebClientResponseException.NotFound.class, throwable -> {
-                    log.info("Master Service Agreement not found for: {}. Request:[{}] {}  Response: {}", legalEntityExternalId,  throwable.getRequest().getMethod(), throwable.getRequest().getURI() , throwable.getResponseBodyAsString());
-                    return Mono.empty();
-                })
-                .map(mapper::toStream);
+        return legalEntityIntegrationApi.getSingleServiceAgreement(legalEntityExternalId)
+            .doOnNext(serviceAgreementItem -> log.info("Service Agreement: {} found for legal entity: {}",
+                serviceAgreementItem.getExternalId(), legalEntityExternalId))
+            .onErrorResume(WebClientResponseException.NotFound.class, throwable -> {
+                log.info("Master Service Agreement not found for: {}. Request:[{}] {}  Response: {}",
+                    legalEntityExternalId, throwable.getRequest().getMethod(), throwable.getRequest().getURI(),
+                    throwable.getResponseBodyAsString());
+                return Mono.empty();
+            })
+            .map(mapper::toStream);
     }
 
     /**
@@ -104,10 +107,13 @@ public class LegalEntityService {
      */
     public Mono<ServiceAgreement> getMasterServiceAgreementForInternalLegalEntityId(String legalEntityInternalId) {
         log.info("Getting Service Agreement for: {}", legalEntityInternalId);
-        return legalEntitiesApi.getMasterServiceAgreement(legalEntityInternalId)
-            .doOnNext(serviceAgreementItem -> log.info("Service Agreement: {} found for legal entity: {}", serviceAgreementItem.getExternalId(), legalEntityInternalId))
+        return legalEntityServiceApi.getSingleServiceAgreement(legalEntityInternalId)
+            .doOnNext(serviceAgreementItem -> log.info("Service Agreement: {} found for legal entity: {}",
+                serviceAgreementItem.getExternalId(), legalEntityInternalId))
             .onErrorResume(WebClientResponseException.NotFound.class, throwable -> {
-                log.info("Master Service Agreement not found for: {}. Request:[{}] {}  Response: {}", legalEntityInternalId,  throwable.getRequest().getMethod(), throwable.getRequest().getURI() , throwable.getResponseBodyAsString());
+                log.info("Master Service Agreement not found for: {}. Request:[{}] {}  Response: {}",
+                    legalEntityInternalId, throwable.getRequest().getMethod(), throwable.getRequest().getURI(),
+                    throwable.getResponseBodyAsString());
                 return Mono.empty();
             })
             .map(serviceAgreementMapper::toStream);
@@ -115,19 +121,20 @@ public class LegalEntityService {
 
     public Mono<LegalEntity> getLegalEntityByExternalId(String externalId) {
         try {
-            return legalEntitiesApi.getLegalEntityByExternalId(externalId)
-                    .onErrorResume(WebClientResponseException.NotFound.class, notFound -> {
-                        log.info("Legal Entity with externalId: {} does not exist: {}", externalId, notFound.getResponseBodyAsString());
-                        return Mono.empty();
-                    })
-                    .map(mapper::toStream);
+            return legalEntityIntegrationApi.getLegalEntityByExternalId(externalId)
+                .onErrorResume(WebClientResponseException.NotFound.class, notFound -> {
+                    log.info("Legal Entity with externalId: {} does not exist: {}", externalId,
+                        notFound.getResponseBodyAsString());
+                    return Mono.empty();
+                })
+                .map(mapper::toStream);
         } catch (RestClientException e) {
             return Mono.error(e);
         }
     }
 
     public Mono<LegalEntity> getLegalEntityByInternalId(String internalId) {
-        return legalEntitiesApi.getLegalEntityById(internalId)
+        return legalEntityServiceApi.getLegalEntityById(internalId)
             .onErrorResume(WebClientResponseException.NotFound.class, notFound -> {
                 log.info("Legal Entity with internalId: {} does not exist: {}", internalId,
                     notFound.getResponseBodyAsString());
@@ -144,15 +151,14 @@ public class LegalEntityService {
      * @return Mono<Void>
      */
     public Mono<Void> deleteLegalEntity(String legalEntityExternalId) {
-        return legalEntitiesApi.postLegalEntitiesBatchDelete(
-                new LegalEntitiesBatchDelete()
-                        .externalIds(Collections.singletonList(legalEntityExternalId)))
-                .map(r -> batchResponseUtils.checkBatchResponseItem(r, "Remove Legal Entity", r.getStatus().getValue(), r.getResourceId(), r.getErrors()))
-                .collectList()
-                .onErrorResume(WebClientResponseException.class, e -> {
-                    log.error("Failed to remove legal  entity: {}", e.getResponseBodyAsString(), e);
-                    return Mono.error(e);
-                }).then();
+        return legalEntityIntegrationApi.batchDeleteLegalEntities(List.of(legalEntityExternalId))
+            .map(r -> batchResponseUtils.checkBatchResponseItem(r, "Remove Legal Entity", r.getStatus().getValue(),
+                r.getResourceId(), r.getErrors()))
+            .collectList()
+            .onErrorResume(WebClientResponseException.class, e -> {
+                log.error("Failed to remove legal  entity: {}", e.getResponseBodyAsString(), e);
+                return Mono.error(e);
+            }).then();
     }
 
     private void handleWebClientResponseException(WebClientResponseException webclientResponseException) {
@@ -169,12 +175,13 @@ public class LegalEntityService {
      * @return The Updated Legal Entity
      */
     public Mono<LegalEntity> putLegalEntity(LegalEntity legalEntity) {
-        LegalEntityPut legalEntityPut = mapper.toLegalEntityPut(legalEntity);
+        LegalEntityUpdate legalEntityUpdate = mapper.toLegalEntityPut(legalEntity);
 
-        return legalEntitiesApi.putLegalEntities(Collections.singletonList(legalEntityPut))
-                .doOnError(WebClientResponseException.class, this::handleWebClientResponseException)
-                .onErrorResume(WebClientResponseException.class, exception -> Mono.error(new RuntimeException("Failed to update Legal Entity",  exception)))
-                .onErrorStop()
-                .then(getLegalEntityByExternalId(legalEntityPut.getNewValues().getExternalId()));
+        return legalEntityServiceApi.updateLegalEntity(legalEntity.getInternalId(), legalEntityUpdate)
+            .doOnError(WebClientResponseException.class, this::handleWebClientResponseException)
+            .onErrorResume(WebClientResponseException.class,
+                exception -> Mono.error(new RuntimeException("Failed to update Legal Entity", exception)))
+            .onErrorStop()
+            .then(getLegalEntityByExternalId(legalEntity.getExternalId()));
     }
 }
